# Project

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh
devel/lib/pkgconfig/: Project_pkg.pc  play_motion.pc  play_motion_msgs.pc  tiago_detection.pc  tiago_detector.pc
devel/lib/play_motion/: play_motion  pm_rrbot  run_motion
devel/lib/python3/dist-packages/play_motion/: __init__.py
devel/share/Project_pkg/cmake/: Project_pkgConfig.cmake
devel/share/gennodejs/ros/play_motion_msgs/msg/: _index.js
devel/share/play_motion/cmake/: play_motionConfig.cmake
devel/share/play_motion_msgs/cmake/: play_motion_msgs-msg-paths.cmake  play_motion_msgsConfig.cmake
devel/share/roseus/ros/play_motion_msgs/: manifest.l
devel/share/tiago_detection/cmake/: tiago_detectionConfig.cmake
devel/share/tiago_detector/cmake/: tiago_detectorConfig.cmake
src/Project_pkg/: package.xml
src/Project_pkg/include/Project_pkg/srv/: Absolute.srv
src/Project_pkg/scripts/: absolutePos.py  detection.py  objectDetection.py  pickClient.py  pickObject.py
src/project_pkg/: CMakeLists.txt
src/project_pkg/scripts/: detection.py  objectDetection.py
src/tiago_detector/: CMakeLists.txt  package.xml
src/tiago_detector/launch/: Robot.launch
src/tiago_detector/scripts/: detection.py  getObjectPosition.py  movementClient.py  objectDetection.json  objectDetection.py  robotPickup.py  robotmove.py  test.py
